Updates from Overleaf

--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,52 @@
 
+@inproceedings{ouma_target_2025,
+	address = {Osaka and Kyoto, Japan},
+	title = {A {Target} {Value} {Maturity} {Model} for {Performance} {Target} {Management} in the {Design} {Phase} of {Lean} {Construction} {Projects}},
+	abstract = {Inconsistent application of target value processes limits the achievement of performance outcomes in value-driven Lean design. Current target value practices are also cost-centric, sidelining other aspects of performance value. Maturity models have been used to introduce consistency in Lean practices implementation. This paper presents a target value maturity model (TVMM) that aims to support consistent target value practices. It defines target value functions and processes that drive design toward holistic performance targets beyond cost. The TVMM was developed through a structure maturity model creation methodology. It specifies four maturity functions: value planning, control, alignment, and learning, and further defines fifteen target value attributes. Project teams can assess their maturity across six levels from nonexistent, to initial, managed, defined, quantitatively managed, and optimized. The model was internally evaluated through three iterations. Clarity on target value functions presented in the model can support consistent implementation and assessment of target value practices in the design phase of projects. The model can also guide alignment of design efforts with targets. Future work will validate this model with industry experts and a case study project.},
+	booktitle = {Proceedings of the 33rd {Annual} {Conference} of the {International} {Group} for {Lean} {Construction} ({IGLC33}},
+	publisher = {International Group for Lean Construction},
+	author = {Ouma, Lorine and Leicht, Robert and Messner, John},
+	month = jun,
+	year = {2025},
+	pages = {199--210},
+}
+
+@inproceedings{miron_target_2015,
+	address = {Perth, Australia},
+	title = {Target {Value} {Design}: {The} {Challenge} of {Value} {Generation}},
+	abstract = {Target Value Design (TVD) is a management approach that aims to maximize value in the framework of a pre-established cost target. TVD views AEC (Architecture, Engineering and Construction) as a complex system and transforms the current design practice upside down. In spite of the existing studies, applying TVD in the context of AEC still represents a major challenge. Creating a structure that enables and measures value generation to the client is part of this challenge.},
+	booktitle = {Proceedings of the 23rd {Annual} {Conference} of the {International} {Group} for {Lean} {Construction}},
+	publisher = {International Group for Lean Construction},
+	author = {Miron, Luciana I Gomes and Kaushik, Amit and Koskela, Lauri},
+	month = jul,
+	year = {2015},
+	pages = {815--825},
+}
+
+@article{muianga_modelo_2023,
+	title = {Modelo evolutivo para la transición gradual a la {Entrega} {Integrada} de {Proyectos} ({IPD})},
+	volume = {38},
+	abstract = {Over the years, construction projects have been developed and delivered through traditional delivery methods. However, traditional delivery methods have been considered ineffective to achieve the real project goals. Integrated and collaborative models, such as Integrated Project Delivery (IPD), a delivery method based on relational contracts, has attracted growing interest in both academia and industry, but still scarce in Architecture Engineering, and Construction (AEC). Most prior research emphasized the identification of barriers and challenges to implementing IPD and few studies focused on developing strategies to overcome those constraints. A limited number of studies have addressed how to reap the benefits of IPD in AEC environments where collaboration between stakeholders is poor. This research investigates how to integrate IPD into AEC projects when collaboration is still limited. An “IPD Evolutionary Model” and guidelines for its implementation were developed for applications in such environments. Design Science Research was the research approach adopted in this study to discuss and evaluate the proposed model. The model emphasizes an evolutionary and flexible process for the IPD application in AEC projects. The model postulates the desirable and required IPD elements according to the levels of application difficulty, emphasising stakeholders' readiness for using it and the gradual introduction of IPD in such environments.},
+	number = {1},
+	journal = {Revista Ingeniería de Construcción},
+	author = {Muianga, Elisa Atália Daniel and Granja, Ariovaldo Denis and Picchi, Flavio Augusto and Formoso, Carlos Torres},
+	month = apr,
+	year = {2023},
+	pages = {144 -- 162},
+}
+
+@article{oliva_target_2024,
+	title = {Target value design: guidelines for implementation in the real estate market in {Brazil}},
+	volume = {20},
+	abstract = {In the current construction industry scenario, several constraints schedule, scope, cost - impact the quality of products delivered. From the clients’ and users’ perspectives, there is a need to incorporate innovative methods for value management in the sector. Delivering products with more added value often runs into investor restrictions and difficulties imposed by a fragmented product development process, representing obstacles to collaboration among stakeholders, especially in the real estate context. These characteristics demand a proactive design process focusesed on value delivery. One of them is Target Value Design (TVD), which has emerged as a viable solution to solve the poor performance in construction. Most TVD applications reported are cases where the owner sets the goals based on the available budget and desired functionalities. This research aims to develop a TVD model adapted for real estate projects, specifically for products with units for sale. In this context, one single company combines different roles, acting as developer and contractor and being responsible for sales to final users. The market, and not the owner, defines the target value and cost. The study was developed in Brazil, where this arrangement is very common, but can provide insights into other countries with similar characteristics. For this purpose, this research adopted the Design Science Research (DSR) strategy, which seeks to explain, describe, explore, or prescribe solutions for real-life problems. Focus Groups technique helped to develop and validate the artifact through learning cycles. As a result, the research proposes a TVD-adapted model and guidelines for implementation in the real estate market.},
+	number = {6},
+	journal = {Architectural Engineering and Design Management},
+	author = {Oliva, Carolina Asensio and Granja, Ariovaldo Denis and Picchi, Flávio Augusto},
+	month = nov,
+	year = {2024},
+	pages = {1323--1334},
+}
+
 @book{noauthor_burgerliches_2025,
 	edition = {Nr. 364},
 	title = {Bürgerliches {Gesetzbuch} ({BGB})},
@@ -110,60 +158,6 @@ Section: Research Methods \&amp; Reporting},
 	language = {de},
 	urldate = {2026-01-06},
 	month = jul,
-	year = {2023},
-}
-
-@inproceedings{ouma_target_2025,
-	address = {Osaka and Kyoto, Japan},
-	title = {A {Target} {Value} {Maturity} {Model} for {Performance} {Target} {Management} in the {Design} {Phase} of {Lean} {Construction} {Projects}},
-	url = {http://iglc.net/Papers/Details/2423},
-	doi = {10.24928/2025/0278},
-	abstract = {Inconsistent application of target value processes limits the achievement of performance outcomes in value-driven Lean design. Current target value practices are also cost-centric, sidelining other aspects of performance value. Maturity models have been used to introduce consistency in Lean practices implementation. This paper presents a target value maturity model (TVMM) that aims to support consistent target value practices. It defines target value functions and processes that drive design toward holistic performance targets beyond cost. The TVMM was developed through a structure maturity model creation methodology. It specifies four maturity functions: value planning, control, alignment, and learning, and further defines fifteen target value attributes. Project teams can assess their maturity across six levels from nonexistent, to initial, managed, defined, quantitatively managed, and optimized. The model was internally evaluated through three iterations. Clarity on target value functions presented in the model can support consistent implementation and assessment of target value practices in the design phase of projects. The model can also guide alignment of design efforts with targets. Future work will validate this model with industry experts and a case study project.},
-	language = {en},
-	urldate = {2025-11-17},
-	author = {Ouma, Lorine and Leicht, Robert and Messner, John},
-	month = jun,
-	year = {2025},
-	pages = {199--210},
-}
-
-@article{miron_target_nodate,
-	title = {{TARGET} {VALUE} {DESIGN}: {THE} {CHALLENGE} {OF} {VALUE} {GENERATION}},
-	abstract = {Target Value Design (TVD) is a management approach that aims to maximize value in the framework of a pre-established cost target. TVD views AEC (Architecture, Engineering and Construction) as a complex system and transforms the current design practice upside down. In spite of the existing studies, applying TVD in the context of AEC still represents a major challenge. Creating a structure that enables and measures value generation to the client is part of this challenge.},
-	language = {en},
-	author = {Miron, Luciana I Gomes and Kaushik, Amit and Koskela, Lauri},
-}
-
-@article{oliva_target_2024,
-	title = {Target value design: guidelines for implementation in the real estate market in {Brazil}},
-	volume = {20},
-	issn = {1745-2007, 1752-7589},
-	shorttitle = {Target value design},
-	url = {https://www.tandfonline.com/doi/full/10.1080/17452007.2023.2281366},
-	doi = {10.1080/17452007.2023.2281366},
-	abstract = {In the current construction industry scenario, several constraints schedule, scope, cost - impact the quality of products delivered. From the clients’ and users’ perspectives, there is a need to incorporate innovative methods for value management in the sector. Delivering products with more added value often runs into investor restrictions and difficulties imposed by a fragmented product development process, representing obstacles to collaboration among stakeholders, especially in the real estate context. These characteristics demand a proactive design process focusesed on value delivery. One of them is Target Value Design (TVD), which has emerged as a viable solution to solve the poor performance in construction. Most TVD applications reported are cases where the owner sets the goals based on the available budget and desired functionalities. This research aims to develop a TVD model adapted for real estate projects, specifically for products with units for sale. In this context, one single company combines different roles, acting as developer and contractor and being responsible for sales to final users. The market, and not the owner, defines the target value and cost. The study was developed in Brazil, where this arrangement is very common, but can provide insights into other countries with similar characteristics. For this purpose, this research adopted the Design Science Research (DSR) strategy, which seeks to explain, describe, explore, or prescribe solutions for real-life problems. Focus Groups technique helped to develop and validate the artifact through learning cycles. As a result, the research proposes a TVD-adapted model and guidelines for implementation in the real estate market.},
-	language = {en},
-	number = {6},
-	urldate = {2025-11-17},
-	journal = {Architectural Engineering and Design Management},
-	author = {Oliva, Carolina Asensio and Granja, Ariovaldo Denis and Picchi, Flávio Augusto},
-	month = nov,
-	year = {2024},
-	pages = {1323--1334},
-}
-
-@article{denis_granja_modelo_2023,
-	title = {Modelo evolutivo para la transición gradual a la {Entrega} {Integrada} de {Proyectos} ({IPD})},
-	volume = {38},
-	issn = {07185073},
-	url = {https://ojs.uc.cl/index.php/ric/article/view/65179},
-	doi = {10.7764/RIC.00058.21},
-	abstract = {Over the years, construction projects have been developed and delivered through traditional delivery methods. However, traditional delivery methods have been considered ineffective to achieve the real project goals. Integrated and collaborative models, such as Integrated Project Delivery (IPD), a delivery method based on relational contracts, has attracted growing interest in both academia and industry, but still scarce in Architecture Engineering, and Construction (AEC). Most prior research emphasized the identification of barriers and challenges to implementing IPD and few studies focused on developing strategies to overcome those constraints. A limited number of studies have addressed how to reap the benefits of IPD in AEC environments where collaboration between stakeholders is poor. This research investigates how to integrate IPD into AEC projects when collaboration is still limited. An “IPD Evolutionary Model” and guidelines for its implementation were developed for applications in such environments. Design Science Research was the research approach adopted in this study to discuss and evaluate the proposed model. The model emphasizes an evolutionary and flexible process for the IPD application in AEC projects. The model postulates the desirable and required IPD elements according to the levels of application difficulty, emphasising stakeholders' readiness for using it and the gradual introduction of IPD in such environments.},
-	language = {en},
-	number = {1},
-	urldate = {2025-11-17},
-	journal = {Revista Ingeniería de Construcción},
-	author = {Denis Granja, A. and Atália Daniel Muianga, E. and Augusto Picchi, F. and Torres Formoso, C.},
 	year = {2023},
 }
 
@@ -644,13 +638,6 @@ Section: Research Methods \&amp; Reporting},
 	publisher = {Unpublished},
 	author = {Mossman, Alan and Ballard, Glenn and Pasquire, Christine},
 	year = {2013},
-}
-
-@article{miron_target_nodate-1,
-	title = {{TARGET} {VALUE} {DESIGN}: {THE} {CHALLENGE} {OF} {VALUE} {GENERATION}},
-	abstract = {Target Value Design (TVD) is a management approach that aims to maximize value in the framework of a pre-established cost target. TVD views AEC (Architecture, Engineering and Construction) as a complex system and transforms the current design practice upside down. In spite of the existing studies, applying TVD in the context of AEC still represents a major challenge. Creating a structure that enables and measures value generation to the client is part of this challenge.},
-	language = {en},
-	author = {Miron, Luciana I Gomes and Kaushik, Amit and Koskela, Lauri},
 }
 
 @book{tzortzopoulos_lean_2020,
