Updates from Overleaf

--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -86,7 +86,31 @@ Zudem bildet dieses \enquote{Gap} die ökonomische Basis für das in Phase 1 und
 
 Erst wenn diese prinzipielle Machbarkeit bestätigt ist, wird das Projekt freigegeben und die Rekrutierung des integrierten Teams eingeleitet.
 
+\subsection{Implementierungshürden in der Projektinitiierung}
+\label{sec:4.2.4}
 
+Während der theoretische Prozess der Phase 0 eine rein an den Nutzerbedürfnissen orientierte Wertdefinition und daraus abgeleitete Zielkosten vorsieht, zeigt die Analyse der deutschen Baupraxis signifikante systemische Divergenzen. Die folgenden Aspekte verdeutlichen, warum die Festlegung valider \textit{Allowable Costs} in der Realität oft scheitert.
+
+\minisec{Das \enquote{Nicht-ROI}-Dilemma öffentlicher Auftraggeber}
+Die TVD-Methodik leitet die \textit{Allowable Cost} idealerweise aus einem Business Case ab ($Allowable Cost < Expected Revenue - Profit$) \autocite[vgl.]{ballard_target_2011}. Diese ökonomische Logik versagt jedoch bei öffentlichen Bauvorhaben (z.\,B. Schulen, Museen), denen kein monetärer Return on Investment (ROI) gegenübersteht.
+Anstelle einer marktbedingten Obergrenze tritt hier oft eine politisch gesetzte Budgetrestriktion (Haushaltsmittel). Dies birgt die Gefahr, dass die \textit{Allowable Cost} nicht funktional hergeleitet, sondern als willkürliches \enquote{Cost-Cap} gesetzt wird \autocite[vgl.]{zimina_target_2012}. Fehlt der ökonomische Korrekturmechanismus des Marktes, droht die Zielkostendefinition von einer wertorientierten Steuerung zu einer reinen Budget-Verwaltung zu degenerieren.
+
+\minisec{Deterministische Haushaltslogik vs. Probabilistische Steuerung}
+TVD arbeitet in frühen Phasen definitionsgemäß mit Zielkorridoren und probabilistischen Kostenschätzungen (z.\,B. p85-Werten), um der Unsicherheit des Entwurfs Rechnung zu tragen \autocite[vgl.]{tommelein_ballard_2016}.
+Das deutsche Haushaltsrecht (LHO) und die Verwaltungspraxis verlangen hingegen oft bereits vor Planungsbeginn einen deterministischen, skalaren Endwert (\enquote{Punktlandung}) zur Freigabe der Mittel \autocite[vgl.]{kalusche_projektmanagement_2020}. Dieser \enquote{Systembruch} zwingt Projektteams dazu, eine Scheingenauigkeit zu suggerieren, indem ein fixer \enquote{Guaranteed Maximum Price} (GMP) oder ein festes Budget simuliert wird, obwohl die Planungstiefe dies methodisch noch nicht zulässt.
+
+\minisec{Eingeschränkter Lösungsraum durch hohe Regulierungsdichte}
+Das TVD-Prinzip setzt voraus, dass bei der Zieldefinition in Phase 0 Variablen wie \textit{Scope} (Umfang) und \textit{Quality} verhandelbar bleiben, um das Kostenziel zu erreichen (Variabilität der Lösungen).
+In der deutschen Baupraxis – insbesondere bei öffentlichen Auftraggebern – sind diese Parameter jedoch oft bereits vor Projektstart durch externe Vorgaben weitgehend determiniert. Gesetzliche Standards, Musterraumprogramme (z.\,B. im Schulbau) und strenge technische Richtlinien definieren faktisch eine \enquote{Untergrenze} der Leistung, die nicht unterschritten werden darf.
+Für den Bauherrn bedeutet dies, dass der theoretische Lösungsraum für ein echtes \enquote{Design-to-Cost} massiv eingeschränkt ist. Die Kosten ergeben sich hier oft als Resultante aus den nicht-verhandelbaren Vorgaben, anstatt dass die Vorgaben an die erlaubten Kosten angepasst werden können.
+
+\minisec{Das \enquote{Phantom-Nutzer}-Problem und die Abstraktion des Werts}
+Oliva et al. (2024) weisen darauf hin, dass die für TVD essenzielle \textit{Value Generation} einen aktiven Nutzer voraussetzt \autocite[vgl.]{oliva_target_2024}. Im deutschen Investorenmodell (Büro/Wohnen) ist dieser Endnutzer zum Zeitpunkt der Zieldefinition oft unbekannt; im öffentlichen Bau wird er häufig durch administrative Stellvertretergremien (z.\,B. Bauämter) ersetzt, die keine direkte operative Entscheidungsgewalt über die Nutzungsprozesse haben \autocite[vgl.]{miron_target_2015}.
+Ohne das direkte Feedback des \enquote{echten} Nutzers verkommt die Definition von \enquote{Wert} zu einer theoretischen Annahme der Planer. Dies führt zu dem Risiko, dass Zielkosten zwar eingehalten werden, das gebaute Ergebnis jedoch am tatsächlichen Bedarf vorbei optimiert wird.
+
+\minisec{Das TOTEX-Vakuum: Investitionskostenfokus vs. Lebenszyklus}
+Aktuelle TVD-Ansätze fokussieren in der Praxis stark auf die Einhaltung der Erstellungskosten (CAPEX) gemäß DIN 276. Eine ganzheitliche Betrachtung, die auch Betriebskosten (OPEX) und Nachhaltigkeitsziele in den Zielwert integriert (\enquote{Target Life Cycle Costing}), ist methodisch oft nicht verankert \autocite[vgl.]{ouma_target_2025}.
+Dies führt in der Zieldefinition zu einem Zielkonflikt: Nachhaltige Investitionen (z.\,B. teurere Fassade, dafür geringere Kühlkosten), die sich erst im Betrieb amortisieren, fallen dem Kostendruck der Erstellungsphase zum Opfer (\enquote{Entfeinerung}), da der Zielwert keine Mechanismen für eine \textit{Total Expenditure} (TOTEX) Betrachtung bereitstellt.
 
 \clearpage
 
@@ -136,6 +160,27 @@ Die Ergebnisse der Validierungsphase werden abschließend im \textbf{Validierung
 Mit der Projektfreigabe erfolgt die formale Fixierung der Ziele im \textbf{Target Value Statement}. Ein zentraler Aspekt ist dabei die Festlegung der \textbf{Basiszielkosten} (\textit{Target Cost}). Diese leiten sich aus den validierten Marktkosten (\textit{Estimated Cost}) ab, werden jedoch im TVD-Verfahren typischerweise unterhalb dieser Prognose angesetzt. Diese Differenz dient als bewusster Puffer gegen Unvorhergesehenes und schafft einen Innovationsdruck für das Team, die Kosten durch intelligentes Design weiter zu senken \autocite[vgl. S.~10]{ballard_target_2025}\,\autocite[vgl.]{zimina_target_2012}.
 
 Zur Absicherung dieser Verpflichtung wird mit der Festlegung der Zielkosten auch der kommerzielle \textbf{Pain/Gain-Share-Mechanismus} aktiviert. Unterschreitet das Team durch Optimierungen in der Folgephase die Basiszielkosten, wird die Einsparung zwischen Bauherr und Planungsteam geteilt (\textit{Gain}). Überschreiten die Kosten hingegen den Zielwert, haftet das Team bis zu einer definierten Grenze mit seinem Risikopool (\textit{Pain}). Diese vertragliche Kopplung von Projekterfolg und Unternehmensgewinn stellt sicher, dass die Einhaltung der Zielkosten für alle Beteiligten nicht nur eine vertragliche Pflicht, sondern ein ökonomisches Eigeninteresse darstellt. \autocite[vgl.]{zimina_target_2012}\,\autocite[vgl.]{lci_guide_2016}
+
+\subsection{Vergabe- und vertragsrechtliche Implementierungshürden}
+\label{sec:4.3.4}
+
+Die erfolgreiche Initialisierung der TVD-Phase 1 setzt die frühzeitige vertragliche Bindung der Schlüsselakteure voraus. In der deutschen Baupraxis trifft diese Anforderung jedoch auf die rigiden Schranken des Vergaberechts und die Systematik des Werkvertragsrechts, was zu folgenden strukturellen Konflikten führt.
+
+\minisec{Das Wettbewerbsparadoxon: Preisfokus vs. Kompetenzauswahl}
+TVD erfordert die Auswahl der Partner primär anhand von Qualifikationen, \enquote{Soft Skills} und der Bereitschaft zur Kollaboration. Für öffentliche Auftraggeber, die an das GWB und die VgV gebunden sind, stellt dies eine massive Hürde dar.
+Das Vergaberecht fordert einen transparenten Wettbewerb um das \enquote{wirtschaftlichste Angebot} (§ 127 GWB). Da zum Zeitpunkt der TVD-Beauftragung oft noch keine detaillierte Leistungsbeschreibung vorliegt (da diese erst gemeinsam entwickelt werden soll), ist ein reiner Preiswettbewerb methodisch unmöglich. Die rechtssichere Operationalisierung von \enquote{Kooperationsfähigkeit} als Zuschlagskriterium erfordert aufwendige Verfahren (z.\,B. Wettbewerblicher Dialog), die viele öffentliche Auftraggeber aufgrund der Komplexität scheuen \autocite[vgl.]{heidemann_vergaberecht_2024}.
+
+\minisec{Die \enquote{Vorbefasstheits-Falle} beim Early Contractor Involvement}
+Die von Granja et al. (2023) geforderte frühzeitige Einbindung ausführender Unternehmen (ECI) als Berater in der frühen Phase birgt im deutschen Vergaberecht das Risiko der \enquote{Projektantenproblematik} (§ 7 VgV).
+Ein Unternehmen, das in Phase 0/1 an der Zielkostenfindung mitgewirkt hat, verfügt über einen Wissensvorsprung. Um den Grundsatz der Gleichbehandlung im späteren Wettbewerb um die Bauleistung nicht zu verletzen, droht diesem Unternehmen der Ausschluss vom Verfahren. Dies führt zu einem systemischen Bruch: Das wertvolle Wissen, das in der Beratungsphase aufgebaut wurde, darf nicht nahtlos in die Realisierungsphase überführt werden, was den Kernnutzen von TVD konterkariert.
+
+\minisec{Marktzutrittsbarrieren durch Digitalisierungsanforderungen (KMU-Lücke)}
+Effizientes TVD setzt laut Ouma et al. (2025) datenbasierte Entscheidungsprozesse voraus (\enquote{Quantitatively Managed}), was in der Praxis den Einsatz von BIM und modellbasierten Kalkulationsmethoden bedingt.
+Diese Anforderung steht im Spannungsfeld zur mittelständischen Struktur der deutschen Bauwirtschaft. Vielen kleineren Handwerksbetrieben (KMU) fehlen die Ressourcen und die digitale Reife für eine Teilnahme an solch hochintegrierten Prozessen. Die strikte Anwendung von TVD-Standards droht somit, lokale und spezialisierte Handwerksbetriebe vom Wettbewerb auszuschließen und eine Marktkonzentration auf Großkonzerne zu fördern, was politischen Zielsetzungen oft widerspricht.
+
+\minisec{Dichotomie von Werkvertragsrecht und Dienstleistungsprozess}
+Juristisch betrachtet ist TVD ein Dienstleistungsprozess (\enquote{Tätigwerden zur Erreichung eines Ziels}), während das deutsche Bauvertragsrecht (VOB/B) vom Typus des Werkvertrags geprägt ist, der einen konkreten Erfolg schuldet.
+Klassische Verträge honorieren die Erstellung des Bauwerks, bieten aber kaum Mechanismen, um die intellektuelle Leistung der \enquote{Kostenoptimierung} oder \enquote{Variantenuntersuchung} zu vergüten, wenn diese nicht direkt in verbaute Masse mündet. Ohne vertragliche Sonderlösungen (z.\,B. Preconstruction Services Agreements) arbeiten Bauunternehmen in der TVD-Phase faktisch auf eigenes Risiko in der Hoffnung auf den späteren Auftrag, was keine stabile Basis für eine vertrauensvolle Zusammenarbeit darstellt.
 
 
 
